# haqsetu

./: .dockerignore  .env.example  .gitignore  .trivyignore  Dockerfile  Makefile  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
.kiro/specs/haqsetu/: design.md  requirements.md
.kiro/specs/rural-india-voice-assistant/: design.md  requirements.md
config/: languages.py  settings.py
infrastructure/: cloudbuild.yaml
infrastructure/terraform/: main.tf  outputs.tf  variables.tf
scripts/: deploy.sh  gcp_vm_bootstrap.sh  generate_keys.sh  setup_local.sh
src/: main.py
src/api/: router.py
src/api/v1/: health.py  (+17 more)
src/data/: seed.py
src/middleware/: auth.py  privacy.py  rate_limit.py
src/models/: __init__.py  enums.py  feedback.py  request.py  response.py  scheme.py  user_profile.py  verification.py
src/pipeline/: orchestrator.py
src/services/: __init__.py  accessibility.py  autofix_orchestrator.py  cache.py  changelog.py  claude_cli_bridge.py  compliance_audit.py  document_scanner.py  eligibility.py  emergency_sos.py  grievance_tracker.py  hinglish.py  legal_rights.py  llm.py  nearby_services.py  notifications.py  rag.py  rti_generator.py  scheme_search.py  self_sustaining.py  speech.py  translation.py  voice_agent.py  whatsapp_sms.py
static/: sw.js
static/css/: skeuo.css
static/js/: app.js
templates/: index.html
tests/: test_cache.py  test_changelog.py  test_eligibility.py  test_feedback_models.py  test_hinglish.py  test_ingestion.py  test_languages.py  test_models.py  test_new_api_endpoints.py  test_notifications.py  test_privacy.py  test_rag.py  test_schemes.py  test_user_profile.py  test_verification_engine.py  test_verification_models.py  test_voice_agent.py
(+11 files in other folders)
