[project]
name = "haqsetu"
version = "0.1.0"
description = "HaqSetu (\u0939\u0915\u093c\u0938\u0947\u0924\u0941) \u2014 Voice-First AI Civic Assistant for Rural India"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "google-cloud-translate>=3.18.0",
    "google-cloud-speech>=2.28.0",
    "google-cloud-texttospeech>=2.22.0",
    "google-cloud-aiplatform>=1.75.0",
    "google-cloud-firestore>=2.19.0",
    "google-cloud-storage>=2.19.0",
    "redis>=5.2.0",
    "numpy>=1.26.0",
    "httpx>=0.28.0",
    "orjson>=3.10.0",
    "python-multipart>=0.0.18",
    "structlog>=24.4.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "config"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["haqsetu"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
